--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,18 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity
+            android:name=".ui.sections.SectionF7S6Activity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF7S4Activity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF7S3Activity"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF7S1Activity"
+            android:exported="true" />
+        <activity
             android:name=".ui.sections.SectionF6S7Activity"
             android:exported="true" />
         <activity
