--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,101 +25,105 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity
+            android:name=".ui.IdentificationActivity"
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
+        <activity
             android:name=".ui.sections.SectionF802Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF9S6Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF9S5Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF9S4Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF9S3Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF9S1Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF801Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF7S6Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF7S4Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF7S3Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF7S1Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF6S7Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF6S6Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF6S5Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF6S4Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF6S3Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF6S2Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF6S1Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF5S4Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF5S3Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF5S2Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF5S1Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF3Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.sections.SectionF2Activity"
-            android:theme="@style/AppThemeEnglish1"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/AppThemeEnglish1" />
         <activity
             android:name=".ui.LoginActivity"
             android:exported="true"
@@ -135,22 +139,18 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-
         <activity
-            android:name="edu.aku.hassannaqvi.uen_kmc.ui.EndingActivity"
+            android:name=".ui.EndingActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
-
         <activity
-            android:name="edu.aku.hassannaqvi.uen_kmc.ui.SyncActivity"
+            android:name=".ui.SyncActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize|stateHidden" />
-
         <activity
-            android:name="edu.aku.hassannaqvi.uen_kmc.database.AndroidDatabaseManager"
+            android:name=".database.AndroidDatabaseManager"
             android:theme="@style/AppTheme" />
-
     </application>
 
 </manifest>
