working on observations

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,8 +136,8 @@ dependencies {
     // Permissions Handeling
     implementation 'com.karumi:dexter:6.2.3'
 
+    // for Debug Database
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
-
     debugImplementation 'com.amitshekhar.android:debug-db-encrypt:1.0.6'
 
 }
