--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity
+            android:name=".ui.WebViewActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.IdentificationActivity"
             android:exported="true"
             android:theme="@style/AppThemeEnglish1" />
