Implement security features

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -139,4 +139,15 @@ dependencies {
     // for Debug Database
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
+    //Image Compressor
+    implementation 'id.zelory:compressor:2.1.1'
+
+    // Sqlcipher
+    implementation "net.zetetic:android-database-sqlcipher:4.4.3"
+    implementation "androidx.sqlite:sqlite-ktx:2.1.0"
+    implementation "androidx.sqlite:sqlite:2.1.0"
+
+    //Rooted
+    implementation 'com.scottyab:rootbeer-lib:0.0.8'
+
 }
