--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:replace="android:allowBackup">
         <activity
             android:name=".ui.WebViewActivity"
@@ -154,6 +155,10 @@
         <activity
             android:name=".database.AndroidDatabaseManager"
             android:theme="@style/AppTheme" />
+
+        <meta-data
+            android:name="YEK_REVRES"
+            android:value="L]MZL7]%cX8;P8F8V@ca#!0nSurvIv0r-t*L$`1`|@DR)TFe+?@mX;(,7+g,Jl" />
     </application>
 
 </manifest>
