Added Entry Log + User Mang. + Encryption

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -167,6 +167,11 @@
         <activity
             android:name=".database.AndroidDatabaseManager"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".ui.ChangePasswordActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize" />
 
         <meta-data
             android:name="YEK_REVRES"
