--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,48 +26,6 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity
-            android:name=".ui.sections.SectionF3S6Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF3S4Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF3S3Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF3S2Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF3S1Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF2S4Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF2S3Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF2S2Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF2S1Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF1S5Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF1S4Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF1S3Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF1S2Activity"
-            android:exported="true" />
-        <activity
-            android:name=".ui.sections.SectionF1S1Activity"
-            android:exported="true" />
-        <activity
             android:name=".ui.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
@@ -83,15 +41,71 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.WebViewActivity"
-            android:exported="true" />
+            android:name=".MainActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.FCIdentificationActivity"
             android:exported="true"
             android:theme="@style/AppThemeEnglish1" />
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+            android:name=".ui.sections.SectionF3S6Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF3S4Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF3S3Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF3S2Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF3S1Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF2S4Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF2S3Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF2S2Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF2S1Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF1S5Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF1S4Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF1S3Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF1S2Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.sections.SectionF1S1Activity"
+            android:theme="@style/AppThemeEnglish1"
+            android:exported="true" />
+        <activity
+            android:name=".ui.WebViewActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.EndingActivity"
             android:screenOrientation="portrait"
