--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -109,6 +109,7 @@
         <activity
             android:name=".ui.EndingActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/AppThemeEnglish1"
             android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".ui.SyncActivity"
