--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,9 +84,9 @@ android {
 
     buildTypes {
         debug {
-            resValue("string", "PORT_NUMBER", "8080")
             resValue("string", "DB_PASSWORD_uen_kmc.db", "a_password")
         }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -152,7 +152,11 @@ dependencies {
 
     // Lottie Animation
     implementation "com.airbnb.android:lottie:3.0.7"
+
     //SDP
     implementation 'com.intuit.sdp:sdp-android:1.0.5'
+
+    // Android Database Browser
+    debugImplementation 'com.amitshekhar.android:debug-db-encrypt:1.0.6'
 
 }
