--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,13 +83,13 @@ android {
 
 
     buildTypes {
-        debug {
-            resValue("string", "DB_PASSWORD_uen_kmc.db", "a_password")
-        }
-
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
+            resValue("string", "DB_PASSWORD_uen_kmc.db", "a_password")
         }
     }
     compileOptions {
@@ -113,7 +113,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    testImplementation 'junit:junit:'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
